tests/reject/fail_borrow.tk
import core/io::println

fn main() -> i32 {
    auto x# = 10
    auto &y# = &x#
    println("x is {}", x) // Error: x is mutably borrowed by y
    return 0
}
